<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>
    <string name="book_saved">The book has been added to the list</string>
    <string name="book_deleted">The book has been removed from the list</string>
    <string name="barcode_scan_instructions">Aim the camera at a barcode to scan</string>

    <string name="ok_button">Next</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_barcode_reader">Barcode Reader</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: <xliff:g id="bookTitle">%1$s</xliff:g></string>

    <string name="camera_permission_error">Access to the camera is needed for detection</string>
    <string name="low_storage_error">Barcode scanner cannot be downloaded due to low device storage</string>
    <string name="network_connection_error">No internet connection available. Please try again later.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
</resources>
